# ecoli

./: README.md  pyproject.toml  run_all.fish  sub_back.py  traj_analyze.py  traj_extract.py  traj_extract_morph.py  traj_filter.py  tumble_rate.py  video_all.fish
conf/: config_1.0.json  config_1.25.json  config_1.7.json  config_2.2.json  config_2.7.json  config_ph7.0_2.0.json  config_ph7.5_2.0.json  dw_mb20_260130_sample5_bulk.json  mw1e6_peo1.0_mb20_260127_sample2_bulk.json  mw1e6_peo1.7_mb20_260127_sample1_bulk.json
figures/: pdf2png.fish
papers/: doi.json  ref.bib
