[project]
name = "ecoli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyqt6>=6.10.2",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "trackpy>=0.7",
]
